@@ -1,7 +1,12 @@
 2009-06-23  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* jchuff.h, jdct.h, jdhuff.h, jmemsys.h, jpegint.h, jpeglib.h: Added
+	#ifdef's to rename public API to _12 version if NEED_12_BIT_NAMES is
+	defined.
+	http://sourceforge.net/support/tracker.php?aid=2809983
+
 	* jcparam.c: add 12bit default huffman tables.
-	https://sourceforge.net/tracker/?func=detail&aid=2809979&group_id=159521&atid=812162
+	http://sourceforge.net/support/tracker.php?aid=2809979
 
 2009-06-21  Frank Warmerdam  <warmerdam@pobox.com>
 
